refactor: fix API paths
